--- a/notebook/problems.es.ipynb
+++ b/notebook/problems.es.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8939d892",
    "metadata": {},
    "outputs": [
@@ -32,8 +32,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "682 \n",
-      " 0.682\n"
+      "655 \n",
+      " 0.655\n"
      ]
     }
    ],
@@ -75,18 +75,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "23244d20",
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'c:\\Program Files\\Python312\\python.exe' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '\"c:/Program Files/Python312/python.exe\" -m pip install ipykernel -U --user --force-reinstall'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 'White', 1: 'White', 2: 'White', 3: 'White', 4: 'White', 5: 'White', 6: 'White', 7: 'White', 8: 'White', 9: 'White', 10: 'Red', 11: 'Red', 12: 'Red', 13: 'Red', 14: 'Red', 15: 'Red', 16: 'Red', 17: 'Red', 18: 'Red', 19: 'Red', 20: 'Red', 21: 'Red', 22: 'Red', 23: 'Red', 24: 'Red', 25: 'Red', 26: 'Red', 27: 'Red', 28: 'Red', 29: 'Red', 30: 'Green', 31: 'Green', 32: 'Green', 33: 'Green', 34: 'Green', 35: 'Green', 36: 'Green', 37: 'Green', 38: 'Green', 39: 'Green', 40: 'Green', 41: 'Green', 42: 'Green', 43: 'Green', 44: 'Green', 45: 'Green', 46: 'Green', 47: 'Green', 48: 'Green', 49: 'Green', 50: 'Green', 51: 'Green', 52: 'Green', 53: 'Green', 54: 'Green', 55: 'Green', 56: 'Green', 57: 'Green', 58: 'Green', 59: 'Green'}\n",
+      "La probabilidad de obtener 3 blancas y 2 rojas en 1000 experimentos es de: 0.002\n",
+      "Y la probabilidad de obtener todas de un mismo color en 1000 experimentos es de: 0.034\n"
      ]
     }
    ],
@@ -105,7 +104,34 @@
     "\n",
     "print(ball_box)\n",
     "            \n",
-    "# TODO"
+    "# TODO\n",
+    "\n",
+    "blancas = 0\n",
+    "rojas = 0\n",
+    "verdes = 0\n",
+    "b3_r2 = 0\n",
+    "mismo_color = 0\n",
+    "for i in range(1000):\n",
+    "    colores_extraidos = []\n",
+    "    for j in range(5):\n",
+    "        ind_aleatorio = random.randint(0,59)\n",
+    "        colores_extraidos.append(ball_box[ind_aleatorio])\n",
+    "\n",
+    "        blancas = colores_extraidos.count(\"White\")\n",
+    "        rojas = colores_extraidos.count(\"Red\")\n",
+    "        verdes = colores_extraidos.count(\"Green\")\n",
+    "\n",
+    "    if blancas == 3 and rojas == 2:\n",
+    "        b3_r2 += 1\n",
+    "    if blancas == 5 or rojas == 5 or verdes == 5:\n",
+    "        mismo_color += 1\n",
+    "\n",
+    "\n",
+    "probabilidad_b3_r2 = b3_r2 / 1000\n",
+    "probabilidad_mismo_color = mismo_color / 1000\n",
+    "\n",
+    "print(f\"La probabilidad de obtener 3 blancas y 2 rojas en 1000 experimentos es de: {probabilidad_b3_r2}\\nY la probabilidad de obtener todas de un mismo color en 1000 experimentos es de: {probabilidad_mismo_color}\")\n",
+    "\n"
    ]
   }
  ],
